--- a/javascript/m1/js.ipynb
+++ b/javascript/m1/js.ipynb
@@ -30,7 +30,10 @@
     {
       "cell_type": "code",
       "source": [
-        "no botao de pesquisa do google é observavel que existe um atributo chamado jsaction , que provavelmente sera o responsavel por direcionar a acao que sera realizada naquele botao de pesquisa que enviara o dado pesquisado para assim retornar um valor ou series de sites relacionados"
+        "no botao de pesquisa do google é observavel que existe um atributo chamado jsaction , 
+        que provavelmente sera o responsavel por direcionar a acao que sera realizada naquele 
+        botao de pesquisa que enviara o dado pesquisado para assim retornar um valor ou series
+        de sites relacionados"
       ],
       "metadata": {
         "id": "c_WhE2SIU89h"
