--- a/javascript/m1/js.ipynb
+++ b/javascript/m1/js.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2lpnVWMCgXfiotfUnL9Nt",
+      "authorship_tag": "ABX9TyOshiapQiWUfdUuL/KlShDt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,14 +30,12 @@
     {
       "cell_type": "code",
       "source": [
-        "no botao de pesquisa do google é observavel que existe \n",
-        "um atributo chamado jsaction , que provavelmente sera o \n",
-        "responsavel por direcionar a acao que sera realizada naquele \n",
-        "botao de pesquisa que enviara o dado pesquisado para assim\n",
-        "retornar um valor ou series de sites relacionados"
+        "dados de redes sociais que visam na amostra de contas de perfil profissioanal como o linkedin\n",
+        "dados de jogos que podem ser utilizados na maioria das vezes para realizar sistemas de rankeamento \n",
+        "dados que sao utilizados por softwares de nutricao para orientar os seus cliente "
       ],
       "metadata": {
-        "id": "c_WhE2SIU89h"
+        "id": "vSx25678ct_W"
       },
       "execution_count": null,
       "outputs": []
